--- a/Pages/Authors/AuthorList.razor
+++ b/Pages/Authors/AuthorList.razor
@@ -20,6 +20,10 @@ else if (!authors.Any())
 }
 else
 {
+     <div class="d-flex mb-2">
+        <input type="text" class="form-control" placeholder="Search by name, address, phone" @bind="searchText"
+            @bind:event="oninput" />
+    </div>
     <table class="table table-striped">
         <thead>
             <tr>
@@ -35,7 +39,7 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var author in authors)
+            @foreach (var author in GetFilteredAuthors())
             {
                 <tr>
                     <td>@author.author_id</td>
@@ -220,4 +224,21 @@ else
         authors = (await AuthorService.GetAuthorsAsync()).ToList();
         isDeleteModalVisible = false;
     }
+
+    //Search functionality
+    private string searchText = string.Empty;
+    private IEnumerable<Author> GetFilteredAuthors()
+    {
+        if (string.IsNullOrWhiteSpace(searchText))
+        {
+            return authors;
+        }
+
+        return authors.Where(a =>
+        (a.author_name?.Contains(searchText, StringComparison.OrdinalIgnoreCase) ?? false) ||
+        (a.address?.Contains(searchText, StringComparison.OrdinalIgnoreCase) ?? false) ||
+        (a.phone?.Contains(searchText, StringComparison.OrdinalIgnoreCase) ?? false));
+
+    }
+    //End Search functionality
 }
