--- a/Pages/Categories/CategoryList.razor
+++ b/Pages/Categories/CategoryList.razor
@@ -18,7 +18,7 @@ else if (!categories.Any())
 else
 {
      <div class="d-flex mb-2">
-        <input type="text" class="form-control" placeholder="Search by name, address, phone" @bind="searchText"
+        <input type="text" class="form-control" placeholder="Search by name, description" @bind="searchText"
             @bind:event="oninput" />
     </div>
 
