--- a/Pages/Books/BookList.razor
+++ b/Pages/Books/BookList.razor
@@ -20,9 +20,9 @@ else if (!books.Any())
 }
 else
 {
-     <div class="d-flex mb-2">
-        <input type="text" class="form-control" placeholder="Search by title, author, publisher, category, isbn" @bind="searchText"
-            @bind:event="oninput" />
+    <div class="d-flex mb-2">
+        <input type="text" class="form-control" placeholder="Search by title, author, publisher, category, isbn"
+            @bind="searchText" @bind:event="oninput" />
     </div>
     <table class="table table-striped">
         <thead>
@@ -246,7 +246,7 @@ else
         isDeleteModalVisible = false;
     }
 
-     //Search functionality
+    //Search functionality
     private string searchText = string.Empty;
     private IEnumerable<BookRead> GetFilteredBooks()
     {
@@ -259,11 +259,11 @@ else
         (b.Title?.Contains(searchText, StringComparison.OrdinalIgnoreCase) ?? false) ||
         (b.Description?.Contains(searchText, StringComparison.OrdinalIgnoreCase) ?? false) ||
         (b.AuthorName?.Contains(searchText, StringComparison.OrdinalIgnoreCase) ?? false) ||
-        (b.PublisherName?.Contains(searchText, StringComparison.OrdinalIgnoreCase) ?? false) || 
+        (b.PublisherName?.Contains(searchText, StringComparison.OrdinalIgnoreCase) ?? false) ||
         (b.CategoryName?.Contains(searchText, StringComparison.OrdinalIgnoreCase) ?? false) ||
         (b.ISBN?.Contains(searchText, StringComparison.OrdinalIgnoreCase) ?? false));
     }
     //End Search functionality
-     
-   
+
+
 }
