--- a/Pages/Publishers/PublisherList.razor
+++ b/Pages/Publishers/PublisherList.razor
@@ -1,6 +1,6 @@
 @page "/publishers"
-@using LibraryPortalBlazorServerApp.Components.Models
-@using LibraryPortalBlazorServerApp.Components.Services
+@using LibraryPortalBlazorServerApp.Models
+@using LibraryPortalBlazorServerApp.Services
 @inject PublisherService PublisherService
 
 <h3>Publishers</h3>
