--- a/Pages/Categories/CategoryList.razor
+++ b/Pages/Categories/CategoryList.razor
@@ -1,6 +1,6 @@
 @page "/categories"
-@using LibraryPortalBlazorServerApp.Components.Models
-@using LibraryPortalBlazorServerApp.Components.Services
+@using LibraryPortalBlazorServerApp.Models
+@using LibraryPortalBlazorServerApp.Services
 @inject CategoryService CategoryService
 
 <h3>Categories</h3>
